# low_level_design

./: CMakeLists.txt
practice_problems/google_docs/: NOTES.md
practice_problems/google_docs/src/: Client.cpp  Client.h  Document.cpp  Document.h  DocumentEditor.cpp  DocumentEditor.h  DocumentElement.cpp  DocumentElement.h  TabSpaceElement.cpp  TabSpaceElement.h  TextElement.cpp  TextElement.h
principles/solid/: dependency_inversion.cpp  interface_segregation.cpp  open_close.cpp
solid/: liskov_substitution.cpp  single_responsibility.cpp
